Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -305,6 +305,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   float: right;
   position: relative;
   background-color: transparent;
+  width: 80%;
 }
 
 .widget.extendednavigation a.pull {
@@ -312,7 +313,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
